Fix footer logo alignment

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -399,9 +399,10 @@ img {
     .text-hide;
     display: inline-block;
     overflow: hidden;
+    vertical-align: top;
     width: 110px;
     height: 30px;
-    margin-left: 2px;
+    margin-left: 3px;
     background: image-url("samrayner.png") no-repeat 0 0;
     background-size: contain;
     opacity: 0.35;
